# PIVOT

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  test_loader_manual.py
.githooks/: check_imports.py
configs/: amd_rocm.yaml  fast_dev.yaml  high_performance.yaml  inference.yaml  intel_xpu.yaml  train.yaml
dashboard/: .env.example  README.md  package-lock.json
dashboard/src/: App.css  App.jsx
dashboard/src/api/: client.js  services.js
dashboard/src/components/: ConfigPanel.css  ConfigPanel.jsx  InferencePanel.css  InferencePanel.jsx  LogsPanel.css  LogsPanel.jsx  MetricsPanel.css  MetricsPanel.jsx
dashboard/src/hooks/: useWebSocket.js
docker/: .dockerignore  Dockerfile.inference.cuda  Dockerfile.inference.intel  Dockerfile.inference.rocm  Dockerfile.train.cuda  Dockerfile.train.intel  Dockerfile.train.rocm  docker-compose.yml  requirements-gpu.txt
docs/: ANNOTATIONS.md  API.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER.md  PIPELINE.md  UV_MIGRATION.md  branch-task-mapping.md  pdm-sequence.md
docs/guides/: API_REFERENCE.md  API_USAGE.md  DATA_PREPARATION.md  DEPLOYMENT.md  INFERENCE.md  OPENAPI.md  TRAINING.md
examples/: README.md  load_medical_scans.py  resample_medical_scan.py
scripts/: detect_gpu.sh  docker_build.sh  docker_dev.sh  docker_inference.sh  docker_train.sh  download_luna16.sh  manage_config.py  setup_env.sh
src/: __init__.py
src/api/: __init__.py  alerting.py  app.py  config.py  database.py  logging_config.py  monitoring.py  process_manager.py  session_manager.py  webhooks.py
src/api/routers/: __init__.py  alerts.py  checkpoints.py  epochs.py  graphs.py  health.py  metrics.py  monitor.py  notifications.py  sse.py  status.py  training.py  webhook.py  websocket.py
src/config/: __init__.py  base.py  config.py  defaults.py
src/data/: __init__.py  annotations.py  augment.py  dataset.py  heatmap.py  intensity.py  loader.py  preprocess.py  resampling.py  triage.py  validation.py
src/eval/: __init__.py  center_accuracy.py  dice.py  froc.py  pipeline.py  report.py  size_accuracy.py  triage_correlation.py
src/inference/: __init__.py  inference_loader.py  main.py  nodule_properties.py  output_formatter.py  overlap_blending.py  peak_detection.py  post_processing.py  sliding_window.py  torchscript_optimizer.py  triage_calibration.py
src/loss/: __init__.py  bce.py  dice.py  focal.py  hard_negative_mining.py  multi_task.py  smooth_l1.py  weighted_bce.py
src/model/: __init__.py  unet.py
src/train/: __init__.py  main.py  metrics_collector.py  metrics_streamer.py  module.py  progress_callback.py  state_tracker.py
src/utils/: logger.py
src/viz/: __init__.py  confidence.py  gradcam.py  overlay.py  rendering_3d.py  report.py  viewer.py
tests/: __init__.py  test_annotations.py  test_api_app.py  test_api_config.py  test_augment.py  test_center_accuracy.py  test_cli_and_utils.py  test_clinical_report.py  test_confidence.py  test_config.py  test_data_loaders.py  test_database.py  test_dataset.py  test_default_session.py  test_dice.py  test_epochs_endpoint.py  test_froc.py  test_gpu_usage_graph_endpoint.py  test_gradcam.py  test_hard_negative_mining.py  test_heatmap.py  test_inference_loader.py  test_intensity.py  test_latest_metrics_endpoint.py  test_learning_rate_graph_endpoint.py  test_loader.py  test_logging.py  test_loss.py  test_loss_graph_endpoint.py  test_metrics_collector.py  test_metrics_endpoint.py  test_metrics_graph_endpoint.py  test_metrics_history_endpoint.py  test_metrics_streamer.py  test_model.py  test_nodule_properties.py  test_notifications_endpoint.py  test_output_formatter.py  test_overlap_blending.py  test_overlay.py  (+27 more)
