# Ruff configuration (replaces black, isort, flake8)
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "ANN",    # flake8-annotations
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from e or raise from None
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101", "ANN"]  # Allow assert, unused args, and no type annotations in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
markers = [
    "integration: Component integration tests",
    "system: End-to-end system tests",
    "slow: Tests that take > 30 seconds",
    "gpu: Tests requiring GPU hardware",
]
filterwarnings = [
    "default",
    "ignore:.*SwigPy.*__module__ attribute:DeprecationWarning",
    "ignore:.*swigvarlink.*__module__ attribute:DeprecationWarning",
    "ignore:'write_like_original' is deprecated and will be removed in v4.0, please use 'enforce_file_format' instead:DeprecationWarning:pydicom.filewriter",
]

[project]
name = "pivot"
version = "0.1.0"
description = "Pulmonary Imaging for Volume Oncology Triage"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PIVOT Team" }
]
keywords = ["medical-imaging", "deep-learning", "lung-cancer", "pytorch", "monai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core deep learning - CPU by default
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "monai>=1.3.0",
    # Medical imaging libraries
    "SimpleITK>=2.3.0",
    "nibabel>=5.0.0",
    "pydicom>=2.4.0",
    # Numerical computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # Data handling
    "pandas>=2.0.0",
    "h5py>=3.9.0",
    # Image processing
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    # Configuration and utilities
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    # Experiment tracking
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    # API and web framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "lightning>=2.1.0",
    "mypy>=1.19.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "pre-commit>=3.6.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "line-profiler>=4.1.0",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
    "hypothesis>=6.92.0",
    "faker>=20.1.0",
]

# GPU backend specific installations
cuda = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

rocm = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

intel = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "intel-extension-for-pytorch>=2.1.0",
]

[project.scripts]
pivot-train = "train.main:main"
pivot-inference = "inference.main:main"
pivot-config = "scripts.manage_config:main"

[project.urls]
Homepage = "https://github.com/Hamza-Bin-Aamir/PIVOT"
Repository = "https://github.com/Hamza-Bin-Aamir/PIVOT"
Issues = "https://github.com/Hamza-Bin-Aamir/PIVOT/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "pre-commit>=3.6.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.uv]
# PyTorch index URLs for different backends
[tool.uv.sources]
# For CPU-only (default for local dev)
# torch = { index = "torch-cpu" }
# torchvision = { index = "torch-cpu" }

# For CUDA (uncomment when using NVIDIA GPU)
# torch = { index = "torch-cuda" }
# torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm5.7"
explicit = true
